add show route and formats show view

--- a/app/views/beers/show.erb
+++ b/app/views/beers/show.erb
@@ -1,2 +1,5 @@
-<h2></h2>
+<h2><%=@beer.name%></h2>
 <br>
+<p><strong>Style:</strong> <%=@beer.style%></p>
+<br>
+<p><strong>Rating:</strong> <%=@beer.rating%></p>
