adds patch route

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -2,7 +2,7 @@
   <header></header>
   <div class="col-md-8 col-md-offset-2">
     <h2>Beer Vault App</h2>
-    <p>Home<a href="/beers/index"></a></p>
+    <p>Home<a href="beers/index"></a></p>
 
   </div>
 </div>
