--- a/app/views/beers/edit.erb
+++ b/app/views/beers/edit.erb
@@ -1,2 +1,16 @@
 <h2>Edit a Beer!</h2>
 <br>
+<form action="beers/<%=@beer.id%>" method="POST">
+  <input type="hidden" id="hidden" name="_method" value="patch">
+  <br>
+  <label>Name: </label>
+  <input type="text" name="name" value="<%=@beer.name%>">
+  <br>
+  <label>Style: </label>
+  <input type="text" name="style" value="<%=@beer.style%>">
+  <br>
+  <label>Rating: </label>
+  <input type="integer" name="rating" value="<%=@beer.rating%>">
+  <br>
+  <input type="submit" value="Submit" id="submit">
+</form>
