--- a/app/views/beers/new.erb
+++ b/app/views/beers/new.erb
@@ -1,2 +1,11 @@
 <h2>Add a Beer!</h2>
 <br>
+<form action="/beers" method="POST">
+<label>Name: </label><input type="text" name="name">
+<br>
+<label>Style: </label><input type="text" name="style">
+<br>
+<label>Rating: </label><input type="integer" name="rating">
+<br>
+<input type="submit" value="Submit" id="submit">
+</form>
