--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,8 +1,10 @@
 <div class="container">
   <header></header>
+
   <div class="col-md-8 col-md-offset-2">
     <h2>Beer Vault App</h2>
-    <p>Home<a href="beers/index"></a></p>
+    <a href="beers/index">My Vault</a>
+
 
   </div>
 </div>
