--- a/app/views/users/sign_up.erb
+++ b/app/views/users/sign_up.erb
@@ -1,11 +1,13 @@
-<h2>Login to your account</h2>
-
-<form method="POST" action="/login">
+<h2>Create your own BeerVault</h2>
+<form action="/signup" method="POST">
+  <label for="name">Name: </label>
+  <input type="text" name="name">
+  <br>
   <label for="email">Email: </label>
   <input type="text" name="email">
   <br>
   <label for="password">Password: </label>
   <input type="password" name="password">
-  <input type="submit"
+  <input type="submit">
 
 </form>
