fix session and sign_in routes

--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,5 +1,5 @@
-<h2>Create your own BeerVault</h2>
-<form action="/signup" method="POST">
+<h2>Create your own BeerVault!</h2>
+<form action='/sign_up' method="POST"
   <label for="name">Name: </label>
   <input type="text" name="name">
   <br>
@@ -9,5 +9,4 @@
   <label for="password">Password: </label>
   <input type="password" name="password">
   <input type="submit">
-
 </form>
