adds user validation to delete route

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,11 +7,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 
+    <link rel="stylesheet" href="/stylesheets/main.css" />
     <title>BeerVault</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="/stylesheets/main.css" />
+
   </head>
   <body>
     <div class="wrapper">
@@ -19,7 +20,7 @@
         <%= yield %>
 
       <footer class="branding">
-        <small>&copy; 2020 <strong>BeerVault</strong></small>
+        <small>&copy; Matt Fleming 2020 <strong>BeerVault</strong></small>
       </footer>
     </div>
 
