--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <header></header>
-  <link rel="stylesheet" href="/stylesheets/main.css" />
+
   <div class="col-md-8 col-md-offset-2">
-    <h2>Beer Vault App</h2>
+    <h2>Welcome to BeerVault!</h2>
     <a href="beers/index">My Vault</a>
 
 
