--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,10 +13,10 @@
 
   /* --- Welcome Page Styles --- */
   body {
-    background-color: lightblue;
+    background-color: #FCD12A;
     color: #333;
     font-family: sans-serif;
-    line-height: 18px;
+    line-height: 25px;
   }
 
   .wrapper {
