--- a/app/views/beers/new.erb
+++ b/app/views/beers/new.erb
@@ -1,3 +1,5 @@
+<h1>Welcome to BeerVault!</h1>
+<br>
 <h2>Add a Beer!</h2>
 <br>
 <form action="/beers" method="POST">
@@ -9,5 +11,5 @@
 <br>
 <input type="submit" value="Submit" id="submit">
 </form>
-
-<a href="beers/index">My Vault</a>
+<br>
+<a href="/beers">My Vault</a>
