fix sign-in route and adds sign out link

--- a/app/views/beers/index.erb
+++ b/app/views/beers/index.erb
@@ -10,3 +10,5 @@
 <form method="get" action="/beers/new">
     <button type="submit">Add a Beer!</button>
 </form>
+<br>
+<a href="/sign_out">Sign Out</a>
