--- a/app/views/beers/new.erb
+++ b/app/views/beers/new.erb
@@ -12,4 +12,4 @@
 <input type="submit" value="Submit" id="submit">
 </form>
 <br>
-<a href="/beers">My Vault</a>
+<a href="/beers"><button><strong>My Vault</strong></button></a>
