--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,5 +1,5 @@
 <h2>Create your own BeerVault!</h2>
-<form action='/sign_up' method="POST"
+<form action='/sign_up' method="POST">
   <label for="name">Name: </label>
   <input type="text" name="name">
   <br>
