--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,7 +7,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 
+
     <title>BeerVault</title>
+    <link rel="icon" href="/images/favicon.ico" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
